[tool.poetry]
name = "toy-robot-python"
version = "0.1.0"
description = ""
authors = ["Joween Flores <4754752+jcf-dev@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "toy_robot_python"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.0"
black = "^22.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
